--- a/react_create.html
+++ b/react_create.html
@@ -12,6 +12,7 @@
     <div id="root">
 
     </div>
+    <div id="root2"></div>
 
     <script>
         //Tạo  element
@@ -42,6 +43,7 @@
 
         //Render
         ReactDOM.render(element, container);
+
     </script>
 </body>
 </html>
